2004-12-02  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/bst.el:
	(bst-font-lock-keywords): fixed parse error

	* dotemacs.el:
	(alt): use this modifier for windmove-default-keybindings
	(icomplete): more completions

	* dotemacs-cust.el:
	(custom-set-variables): ECB vc integration

2004-11-21  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(dired-mode-map): delay binding

	* dotemacs.el:
	(dired-load-hook): use ediff from dired

	* dotemacs-cust.el:
	(custom-set-variables): omit only . (not ..) in dired mode

2004-11-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/graphviz-dot-mode.el:
	initial checkin

	* perso/fold-dwim.el:
	initial checkin

	* perso/psvn.el:
	new version

	* dotemacs.el:
	(dired-mode-map): bind "C-c C-c" to wdired mode
	(kbd): typo

	* dotemacs-cust.el:
	(custom-set-variables): allow wdired to change permissions

2004-10-27  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(abbrev-mode): use it in LaTeX-mode
	(server): in case one wants to use emacs on background
	(global-set-key): suppress speedbar key, add cvs ones
	(auto-mode-alist): muse files

	* dotemacs-cust.el:
	(custom-set-variables): break lines in a smarter way

2004-10-13  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs-cust.el:
	(fill-column): set it to 79, you idiot! :)
	(custom-set-faces): modify tabbar faces

	* dotemacs.el:
	perform debug on error
	(sh-mode): more colors

2004-10-09  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(kill-syntax-forward): new function form Alex Schröder
	(kill-syntax-backward): new function form Alex Schröder

2004-10-05  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	use utf-8 as default coding system
	use flashcards

	* perso/flashcard.el:
	initial checkin

2004-09-29  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tabbar.el:
	update to 1.3 version

	* dotemacs.el:
	(muse): make it work (find better later)
	(yh/tabbar-inhibit-function): new inhibition function for tabbar
	replace mtorus by tabbar