@@ -1,3 +1,8 @@
+2004-12-04  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotgnus.el:
+	(nbc-nnir): set it to nil
+
 2004-12-02  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/bst.el:
